--- a/index.html
+++ b/index.html
@@ -7,39 +7,45 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
+            font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'SF Pro Display', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            line-height: 1.5;
             color: #333;
             max-width: 1200px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 15px;
             background-color: #f5f7f9;
+            font-size: 14px;
         }
         header {
             text-align: center;
-            margin-bottom: 30px;
-            padding: 20px;
+            margin-bottom: 20px;
+            padding: 15px;
             background-color: #2c3e50;
             color: white;
-            border-radius: 8px;
+            border-radius: 6px;
         }
         h1 {
             margin: 0;
+            font-size: 22px;
+        }
+        h2 {
+            font-size: 18px;
+            margin-top: 0;
         }
         .input-section {
             background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            margin-bottom: 30px;
+            padding: 15px;
+            border-radius: 6px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
             text-align: center;
         }
         input, button, select {
-            padding: 10px 15px;
-            margin: 0 10px;
+            padding: 8px 12px;
+            margin: 0 8px;
             border-radius: 4px;
             border: 1px solid #ddd;
-            font-size: 16px;
+            font-size: 13px;
         }
         button {
             background-color: #3498db;
@@ -53,48 +59,51 @@
         }
         .chart-container {
             background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            margin-bottom: 30px;
+            padding: 15px;
+            border-radius: 6px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
         }
         .data-section {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
-            margin-bottom: 30px;
+            gap: 15px;
+            margin-bottom: 20px;
         }
         .data-card {
             flex: 1;
-            min-width: 300px;
+            min-width: 280px;
             background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            padding: 15px;
+            border-radius: 6px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
         .error {
             color: #e74c3c;
             text-align: center;
-            padding: 10px;
+            padding: 8px;
             background-color: #fadbd8;
             border-radius: 4px;
-            margin: 10px 0;
+            margin: 8px 0;
+            font-size: 13px;
         }
         .loading {
             text-align: center;
-            padding: 20px;
+            padding: 15px;
+            font-size: 13px;
         }
         .month-tabs {
             display: flex;
             flex-wrap: wrap;
-            margin-bottom: 20px;
-            gap: 5px;
+            margin-bottom: 15px;
+            gap: 4px;
         }
         .month-tab {
-            padding: 10px 20px;
+            padding: 8px 15px;
             background-color: #e0e0e0;
             cursor: pointer;
             border-radius: 4px;
+            font-size: 13px;
         }
         .month-tab.active {
             background-color: #3498db;
@@ -103,10 +112,11 @@
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 15px;
+            margin-top: 12px;
+            font-size: 13px;
         }
         th, td {
-            padding: 10px;
+            padding: 8px;
             text-align: left;
             border-bottom: 1px solid #ddd;
         }
@@ -115,24 +125,26 @@
         }
         .no-data {
             text-align: center;
-            padding: 20px;
+            padding: 15px;
             color: #7f8c8d;
+            font-size: 13px;
         }
         .legend-item {
             display: flex;
             align-items: center;
-            margin-right: 15px;
+            margin-right: 12px;
+            font-size: 13px;
         }
         .legend-color {
-            width: 15px;
-            height: 15px;
+            width: 12px;
+            height: 12px;
             margin-right: 5px;
             display: inline-block;
         }
         .chart-legend {
             display: flex;
             justify-content: center;
-            margin-top: 15px;
+            margin-top: 12px;
             flex-wrap: wrap;
         }
     </style>
@@ -348,6 +360,15 @@
                             borderColor: 'rgba(52, 152, 219, 1)',
                             borderWidth: 2,
                             yAxisID: 'y',
+                            order: 3
+                        },
+                        {
+                            label: 'Total Rejects',
+                            data: rejectedImagesData,
+                            backgroundColor: 'rgba(241, 196, 15, 0.7)',
+                            borderColor: 'rgba(241, 196, 15, 1)',
+                            borderWidth: 2,
+                            yAxisID: 'y',
                             order: 2
                         },
                         {
@@ -357,8 +378,8 @@
                             borderColor: 'rgba(231, 76, 60, 1)',
                             borderWidth: 3,
                             pointBackgroundColor: 'rgba(231, 76, 60, 1)',
-                            pointRadius: 6,
-                            pointHoverRadius: 8,
+                            pointRadius: 5,
+                            pointHoverRadius: 7,
                             type: 'line',
                             yAxisID: 'y1',
                             order: 1,
@@ -382,15 +403,12 @@
                                     }
                                     if (context.datasetIndex === 0) {
                                         label += context.parsed.y + ' images';
+                                    } else if (context.datasetIndex === 1) {
+                                        label += context.parsed.y + ' rejects';
                                     } else {
                                         label += context.parsed.y.toFixed(1) + '%';
                                     }
                                     return label;
-                                },
-                                afterLabel: function(context) {
-                                    // Add total rejects to the tooltip
-                                    const dataIndex = context.dataIndex;
-                                    return `Total Rejects: ${rejectedImagesData[dataIndex]}`;
                                 }
                             }
                         },
@@ -405,7 +423,7 @@
                             position: 'left',
                             title: {
                                 display: true,
-                                text: 'Total Images'
+                                text: 'Number of Images'
                             },
                             beginAtZero: true,
                             max: Math.ceil(maxTotalImages * 1.1), // Add 10% padding
@@ -441,6 +459,10 @@
                 <div class="legend-item">
                     <span class="legend-color" style="background-color: rgba(52, 152, 219, 0.7)"></span>
                     <span>Total Images</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-color" style="background-color: rgba(241, 196, 15, 0.7)"></span>
+                    <span>Total Rejects</span>
                 </div>
                 <div class="legend-item">
                     <span class="legend-color" style="background-color: rgba(231, 76, 60, 1)"></span>
