--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
 </head>
 <body>
     <header>
-        <h1>Radiographer Reject Rate Analysis</h1>
+        <h1>RR Analysis</h1>
     </header>
 
     <div class="input-section">
-        <h2>Enter Radiographer Initials</h2>
+        <h2>Enter Initials</h2>
         <input type="text" id="techIdInput" placeholder="e.g., BYT" maxlength="5">
         <button id="fetchDataBtn">Fetch Data</button>
     </div>
