--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <div class="input-section">
         <h2>Enter Radiographer Initials</h2>
-        <input type="text" id="techIdInput" placeholder="e.g., AAJ" maxlength="3">
+        <input type="text" id="techIdInput" placeholder="e.g., RAD1" maxlength="5">
         <button id="fetchDataBtn">Fetch Data</button>
         
         <div class="optimization-note">
