--- a/index.html
+++ b/index.html
@@ -553,6 +553,7 @@
                 </div>
                 <div class="chart-legend" id="trendLegend"></div>
             </div>
+        </div>
 
             <div class="tabs-container">
                 <div class="month-tabs" id="monthTabs">
