--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         .card h2 {
             font-size: 1.25rem;
             font-weight: 700;
-            margin-bottom: 20px;
+            margin-bottom: 40px;
             color: var(--dark);
             display: flex;
             align-items: center;
@@ -523,7 +523,7 @@
         </header>
 
         <div class="input-section">
-            <h2 style="text-align: center; margin-bottom: 20px; font-size: 1.1rem; color: var(--gray);">Enter Radiographer Initials</h2>
+            <h2 style="text-align: center; margin-bottom: 20px; font-size: 1.1rem; color: var(--gray);">Enter Initials</h2>
             <div class="input-group">
                 <div class="input-wrapper">
                     <input type="text" id="techIdInput" placeholder="e.g., RAD1" maxlength="5">
