--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         .card h2 {
             font-size: 1.25rem;
             font-weight: 700;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
             color: var(--dark);
             display: flex;
             align-items: center;
@@ -313,6 +313,7 @@
             backdrop-filter: blur(10px);
             border-radius: 16px;
             padding: 8px;
+            margin: 20 px;
             margin-bottom: 20px;
             box-shadow: var(--shadow);
         }
