--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
             backdrop-filter: blur(10px);
             border-radius: 16px;
             padding: 25px;
+            margin-bottom: 20px;
             box-shadow: var(--shadow-lg);
             transition: var(--transition);
             animation: fadeInUp 0.6s ease-out backwards;
